# hylight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  make_docs.py  make_page.py  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.rst
docs/_sources/: index.rst.txt
docs/_templates/: page.html
docs/ref/: hylight.crystal.html  hylight.findiff.html  hylight.html  hylight.jmol.html  hylight.phonopy.html  hylight.vasp.html  modules.html
docs/tutorial/: OUTCAR.npz  excitation.csv  tutorial.html
docs_src/: Makefile  conf.py  make.bat
docs_src/ref/: hylight.crystal.rst  hylight.findiff.rst  hylight.jmol.rst  hylight.rst
docs_src/tutorial/: OUTCAR.npz  POSCAR  POSCAR_ES  POSCAR_GS  POSCAR_S1  big_mode.jmol  emission_300K.csv  lum_BaZrO3_277nm_220518_corr.csv  recorded_emission.txt  tutorial.ipynb  vib_ti_mg_edge_crys.log.npz
hylight/: __init__.py  constants.py  guess_width.py  loader.py  mode.py  mono_mode.py  mono_phonon.py  mp.py  multi_modes.py  multi_phonons.py  npz.py  pkl.py  spectra.py  struct.py  typing.py  utils.py
hylight/cli/: __init__.py  modes.py  pos.py  script_utils.py
hylight/crystal/: __init__.py  common.py  loader.py
hylight/findiff/: __init__.py  collect.py  gen.py
hylight/jmol/: __init__.py  data.py
hylight/loader/: __init__.py  crystal.py  vasp.py
hylight/phonopy/: __init__.py  loader.py
hylight/process/: collect.py  gen.py
public/: .gitignore
(+33 files in other folders)
