[metadata]

name = hylight
version = attr: hylight.__version__
author = Théo Cavignac
author_email = theo.cavignac@cnrs-imn.fr
description = Hylight is post-processing package for luminescence related ab initio computations.
long_description = file: README.md
long_description_content_type = text/markdown
python_requires= >=3.6
license = BSD 3-Clause License

[options]
url = https://github.com/PyDEF/hylight

packages = find:

install_requires =
    matplotlib >=3.0
    numpy >=1.16
    scipy >=1.3

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    chemistry
    computational chemistry

[options.extras_require]
phonopy =
    yaml

[options.entry_points]
console_scripts =
    hylight-modes=hylight.cli.modes:cmd
    hylight-pos=hylight.cli.pos:cmd
